k8s/cartservice.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cartservice
  namespace: microservices

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cartservice

  template:
    metadata:
      labels:
        app: cartservice

    spec:
      containers:
      - name: cartservice

        image: yugandhar25/cartservice:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 7070

        readinessProbe:
          tcpSocket:
            port: 7070
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1

        livenessProbe:
          tcpSocket:
            port: 7070
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3

---
apiVersion: v1
kind: Service

metadata:
  name: cartservice
  namespace: microservices

spec:
  selector:
    app: cartservice

  ports:
    - port: 7070
      targetPort: 7070
