k8s/checkoutservice.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: checkoutservice
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: checkoutservice

  template:
    metadata:
      labels:
        app: checkoutservice

    spec:
      containers:
        - name: checkoutservice

          image: yugandhar25/checkoutservice:v2

          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service

metadata:
  name: checkoutservice
  namespace: microservices

spec:
  selector:
    app: checkoutservice

  ports:
    - port: 5050
      targetPort: 5050
