k8s/currencyservice.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: currencyservice
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: currencyservice

  template:
    metadata:
      labels:
        app: currencyservice

    spec:
      containers:
      - name: currencyservice

        image: yugandhar25/currencyservice:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 7000
---

apiVersion: v1
kind: Service

metadata:
  name: currencyservice
  namespace: microservices

spec:
  selector:
    app: currencyservice

  ports:
    - port: 7000
      targetPort: 7000
