k8s/emailservice.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: emailservice
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: emailservice

  template:
    metadata:
      labels:
        app: emailservice

    spec:
      containers:
      - name: emailservice

        image: yugandhar25/emailservice:v1

        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: emailservice
  namespace: microservices

spec:
  selector:
    app: emailservice

  ports:
    - port: 8080
      targetPort: 8080
