k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: yugandhar25/frontend:v1

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: microservices

spec:
  type: LoadBalancer

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 8080
