k8s/frontend2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: microservices

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend
      version: v2

  template:
    metadata:
      labels:
        app: frontend
        version: v2

    spec:
      containers:
      - name: frontend

        image: yugandhar25/frontend:v2.1

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2
  namespace: microservices

spec:
  type: ClusterIP

  selector:
    app: frontend
    version: v2

  ports:
  - port: 80
    targetPort: 8080
