k8s/paymentservice.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: paymentservice
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: paymentservice

  template:
    metadata:
      labels:
        app: paymentservice

    spec:
      containers:
        - name: paymentservice

          image: yugandhar25/paymentservice:v2

          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service

metadata:
  name: paymentservice
  namespace: microservices

spec:
  selector:
    app: paymentservice

  ports:
    - port: 50051
      targetPort: 50051
