k8s/productcatalogservice.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: productcatalogservice
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: productcatalogservice

  template:
    metadata:
      labels:
        app: productcatalogservice

    spec:
      containers:
      - name: productcatalogservice

        image: yugandhar25/productcatalogservice:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 3550
---
apiVersion: v1
kind: Service

metadata:
  name: productcatalogservice
  namespace: microservices

spec:
  selector:
    app: productcatalogservice

  ports:
    - port: 3550
      targetPort: 3550
