k8s/recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: recommendationservice
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: recommendationservice

  template:
    metadata:
      labels:
        app: recommendationservice

    spec:
      containers:
        - name: recommendationservice

          image: yugandhar25/recommendationservice:v3

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service

metadata:
  name: recommendationservice
  namespace: microservices

spec:
  selector:
    app: recommendationservice

  ports:
    - port: 8080
      targetPort: 8080
