k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-cart
  namespace: microservices

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis-cart

  template:
    metadata:
      labels:
        app: redis-cart

    spec:
      containers:
      - name: redis-cart
        image: redis:alpine

        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service

metadata:
  name: redis-cart
  namespace: microservices

spec:
  selector:
    app: redis-cart

  ports:
    - port: 6379
      targetPort: 6379
